Electric field solns

--- a/Electric_Field/Electric_Field.tex
+++ b/Electric_Field/Electric_Field.tex
@@ -253,7 +253,7 @@ Charge $q_1 = +q$ is at $(x, y) = (a, 0)$, charge $q_2 = +q$ is at $(x, y) = (-a
 
 \ifsolutions
 
-\input{figures/Superposition.tikz?1675127848184?1675127853632}
+\input{figures/Superposition.tikz}
 \else
 
 \input{../Electric_Force/figures/grid.tikz}
